--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,40 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+
+    <nav class="navbar navbar-default">
+      
+      <div class="container">
+        
+        <div class="navbar-header">
+          <h1><%= link_to "The Record Bin", root_path, class: "navbar-brand" %></h1>
+        </div>
+
+        <ul class="nav navbar-nav">
+          <li><%= link_to  "Sign Up", new_user_registration_path %></li>
+          <% if user_signed_in? %>
+            <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+            <% else %>
+              <li><%= link_to "Log In", new_user_session_path %></li>
+            <% end %>
+          
+        </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+          <% if user_signed_in? %>
+          <li><%= link_to  "Add Album", new_album_path %></li>
+          <% end %>
+        </ul>
+
+
+      </div>
+    </nav>
+
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
     <%= yield %>
