--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-default">
       
-      <div class="container">
+      <div class="container site-navbar">
         
         <div class="navbar-header">
           <h1><%= link_to "The Record Bin", root_path, class: "navbar-brand" %></h1>
