Improved navigation and display options

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,17 +14,17 @@
           <%= link_to "The Record Bin", root_path, class: "navbar-brand" %>
         </h1>
       </div>
-
+                                                      
       <div class="container">
         <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
+          <li class="dropdown mr-5">
             <a
               href="#"
               class="dropdown-toggle"
               data-toggle="dropdown"
               role="button"
               aria-expanded="false"
-              >Genres <span class="caret"></span
+              >Genres<span class="caret"></span
             ></a>
             <ul class="dropdown-menu" role="menu">
               <% Genre.all.each do |genre| %>
@@ -37,13 +37,13 @@
           </li>
 
           <% if user_signed_in? %>
-          <li><%= link_to "Add Album", new_album_path %></li>
-          <li>
+          <li class="mr-5"><%= link_to "Add Album", new_album_path %></li>
+          <li class="mr-5">
             <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
           </li>
           <% else %>
-          <li><%= link_to "Log In", new_user_session_path %></li>
-          <li><%= link_to "Sign Up", new_user_registration_path %></li>
+          <li class="mr-5"><%= link_to "Log In", new_user_session_path %></li>
+          <li class="mr-5"><%= link_to "Sign Up", new_user_registration_path %></li>
           <% end %> <% if user_signed_in? %> <% end %>
         </ul>
       </div>
