--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -6,4 +6,11 @@
 			</div>
 			<%= f.input :comment %>
 			<%= f.button :submit, :class => "btn-custom2" %>
-		<% end %>	
+		<% end %>
+		
+		<script>
+				$('#rating-form').raty({
+					path: '/assets/',
+					scoreName: 'review[rating]'
+				});
+			</script>
