--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -5,7 +5,9 @@
 
 	<div class="col-md-8">
       <h2><%= @album.title %></h2>
-			<h3><span>By</span> <%= @album.artist %></h3>
+      <h3><span>By</span> <%= @album.artist %></h3>
+      <h2 class="avg-rating">Average Rating</h2>
+			<div class="average-review-rating" data-score=<%= @average_review %>></div>
 		  <p><%= @album.description %></p>
     </div>
 	</div>
@@ -41,6 +43,30 @@
   <% end %>  
   
   <% end %>
+
+  <script>
+    $(document).ready(function() {
+      $('.individual-review-rating').raty({
+          readOnly: true,
+          score: function() {
+              return $(this).attr('data-score');
+          },
+          path: '/assets/'
+      });
+    });  
+  </script>
+
+  <script>
+    $(document).ready(function() {
+	$('.average-review-rating').raty({
+		readOnly: true,
+		path: '/assets/',
+		score: function() {
+			return $(this).attr('data-score')
+		}
+  });
+    });
+</script>
 
 </div>	
 
