--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,12 +1,11 @@
-<div class="row">
-  <div class="col-md-4">
-    <%= image_tag @album.image.variant(resize_to_limit: [200, 200]) %>
+<div class="container-fluid">
+  <div class="col">
+    <%= image_tag @album.image.variant(resize_to_limit: [350, 350]) %>
   </div>
 
-	<div class="col-md-8">
-      <h2><%= @album.title %></h2>
-      <h3><span>By</span> <%= @album.artist %></h3>
-      <h2 class="avg-rating">Average Rating</h2>
+	<div class="col">
+      <h2><%= @album.title %><span> by</span> <%= @album.artist %></h2>
+      <h3 class="avg-rating">Average Rating</h3>
 			<div class="average-review-rating" data-score=<%= @average_review %>></div>
 		  <p><%= @album.description %></p>
     </div>
@@ -18,7 +17,7 @@
 <div class="reviews">
 
   
-    <h1>Reviews</h1>
+    <h3>Reviews</h3>
     <%= render @album.reviews %>
 
     <div>
