--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -4,10 +4,10 @@
 <% if @albums.count == 0 %>
   <h1>There are no albums currently in this genre!</h1>
 <% else %>	
-  <div class="row">
+  <div class="row container">
     <% @albums.each do |album| %>
-      <div class="col-md-5">
-      <a href="/albums/<%= album.id %>">
+      <div class="col-sm-3 ">
+      <a href="/albums/<%= album.id %>" class="main-page-album">
         <%= image_tag album.image.variant(resize_to_limit: [200, 200]) %>
       </a>
     </div>
