--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,14 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light site-header">
-      <div class="navbar-header">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light site-header justify-content-between">
+      <div class="navbar-header mr-5">
         <h1>
           <%= link_to "The Record Bin", root_path, class: "navbar-brand" %>
         </h1>
       </div>
                                                       
-      <div class="container">
+      <div class="ml-5 align-items-end">
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown mr-5">
             <a
@@ -31,7 +31,7 @@
               <% Genre.all.each do |genre| %>
               <li class="<%= 'active' if params[:genre] == genre.name %>">
                 <%= link_to genre.name, albums_path(genre: genre.name), class:
-                "link" %>
+                "link ml-2" %>
               </li>
               <% end %>
             </ul>
