Improved layout and spacing on Show Page, added artist and title labels to records on index page

--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -9,6 +9,7 @@
       <div class="col-sm-3">
       <a href="/albums/<%= album.id %>" >
         <%= image_tag album.image.variant(resize_to_limit: [200, 200]), :class => "mb-3" %>
+        <p><%= album.title %> by <%= album.artist %></p>
       </a>
     </div>
     <% end %>
