--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,26 +1,27 @@
 <div class="container m-3">
   <div class="col">
-    <%= image_tag @album.image.variant(resize_to_limit: [400, 400]) %>
+    <h2 class="mt-2"><%= @album.title %><span> by</span> <%= @album.artist %></h2>
   </div>
   <div class="col">
-    <h2 class="mt-2"><%= @album.title %><span> by</span> <%= @album.artist %></h2>
-    <p><%= @album.description %></p>
+    <%= image_tag @album.image.variant(resize_to_limit: [400, 400]) %>
+    <p class="mt-2"><%= @album.description %></p>
   </div>
+  
 </div>
 
 <div class="container m-3 ml-4">
   <h3 class="ml-1">Reviews</h3>
-  <div class-="ml-4"><%= render @album.reviews %></div>
+  <div class="ml-1"><%= render @album.reviews %></div>
 </div>
 
-<div class="container m-3">
+<div class="container ml-4">
   <%= link_to "Add Review", new_album_review_path(@album), class: "btn-custom" %>
 </div>
 
 <div class="links btn-group">
-  <%= link_to "Back", root_path, class: "btn btn-custom" %>
+  <%= link_to "Back", root_path, class: "btn btn-custom mt-3" %>
 
-  <div class="container">
+  <div class="container mt-3">
     <% if user_signed_in? %>
     <% if @album.user_id == current_user.id %>
       <%= link_to 'Edit ', edit_album_path(@album), class: "btn btn-custom" %> 
