--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -1,8 +1,10 @@
-<%= simple_form_for @album, :html => { :multipart => true } do |f| %>
-<%= select_tag(:genre_id, options_for_select(@genres), :prompt => "Select a genre") %>
+<div class="container">
+<%= simple_form_for @album, :html => { :multipart => true, :class: 'form-inline' } do |f| %>
+<%= select_tag(:genre_id, options_for_select(@genres), :prompt => "Select a genre"), :class => 'm-3' %>
 	<%= f.file_field :image %>
 	<%= f.input :title, label: "Record Title" %>
 	<%= f.input :description %>
 	<%= f.input :artist %>
 	<%= f.button :submit, :class => 'btn-custom2' %>
 <% end %>
+</div>
