--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -5,6 +5,6 @@
   <%= f.text_field :title, label: "Record Title" %>
   <%= f.text_field :description %>
   <%= f.text_field :artist %>
-  <%= f.submit %>
+  <%= f.submit "Add Album" %>
 <% end %>
 </div>
